# bioimagedownloader

./: .gitignore  GITHUB_UPLOAD_INSTRUCTIONS.md  LICENSE  MANIFEST.in  README.md  build_package.py  download_bio_icons.py  download_bio_icons_headless.py  pyproject.toml  requirements.txt  setup.py
Output/DNA/: bioart_links.txt  nounproject_links.txt
Output/protein/: bioart_links.txt  nounproject_links.txt
bioimagedownloader/: __init__.py  cli.py
bioimagedownloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scrapers/: __init__.py  bioart.py  bioicons.py  flaticon.py  freepik.py  nounproject.py  openclipart.py  pixabay.py  scidraw.py  svgrepo.py  utils.py  vecteezy.py
