[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bioimagedownloader"
version = "1.0.0"
description = "Download biology/science icons from multiple websites"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["biology", "icons", "images", "scraper", "download", "science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
bioimagedownloader = "bioimagedownloader.cli:main"

[project.urls]
Homepage = "https://github.com/muhammadmuneeb007/bioimagedownloader"
Documentation = "https://github.com/muhammadmuneeb007/bioimagedownloader#readme"
Repository = "https://github.com/muhammadmuneeb007/bioimagedownloader"
Issues = "https://github.com/muhammadmuneeb007/bioimagedownloader/issues"
